# ERMACK

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTION.md  Dockerfile  INSTALLATION.md  NOTICE.md  README.md  VISION.md  config.yml  docker-compose.yml  index.html  main.py  pyproject.toml  requirements.txt  requirements_test.txt  sitemap.xml  spell_checking_dict.txt  tox.ini  whitelist.txt
.github/workflows/: deploy.yml
CONTRIBUTION/: index.html
INSTALLATION/: index.html
VISION/: index.html
artifacts/: index.html
artifacts/A_1001_windows_domain_account/entity/: index.html
artifacts/A_1002_dns_traffic/entity/: index.html
artifacts/A_1003_windows_local_account/entity/: index.html
artifacts/A_1004_linux_local_account/entity/: index.html
assets/javascripts/: iframe-worker.js
ermack/: render_knowledge_base.py
ermack/data_providers/: confluence_provider.py  data_provider.py  markdown_provider.py  mkdocs_provider.py
ermack/entities/: artifact.py  entities_map.py  entity.py  infrastructure_profile.py  response_action.py  response_action_implementation.py  response_playbook.py  response_stage.py  software.py  usecases.py
ermack/utils/: attack_mapping.py  cpe_wrapper.py  create_entity_fs.py  localization.py  update_attack_mapping.py  utils.py  visual.py
infrastructure_profile.md/: index.html
response_playbooks/: index.html
response_stages/: index.html
search/: search_index.json
software/: index.html
stylesheets/: extra.css
sub_response_playbooks/: index.html
usecases/: index.html
(+1830 files in other folders)
